<resources>
    <string name="app_name">sociableNetwork</string>
    <string name="user">__dymo</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like">like</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="share">share</string>
    <string name="person">person</string>
    <string name="countofposts">0</string>
    <string name="countoffollowing">25</string>
    <string name="countoffollowers">36</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="edit">Edit profile</string>
    <string name="profpic">profile picture</string>
</resources>